--- a/java/tensorflow/pom.xml
+++ b/java/tensorflow/pom.xml
@@ -1,10 +1,10 @@
 <project>
      <modelVersion>4.0.0</modelVersion>
      <groupId>org.myorg</groupId>
-     <artifactId>hellotf</artifactId>
+     <artifactId>tf_load_model</artifactId>
      <version>1.0-SNAPSHOT</version>
      <properties>
-       <exec.mainClass>HelloTF</exec.mainClass>
+       <exec.mainClass>TFLoadModel</exec.mainClass>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
      </properties>
@@ -14,5 +14,11 @@
          <artifactId>tensorflow</artifactId>
          <version>1.8.0</version>
        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
      </dependencies>
  </project>
